--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 
-		<title>Hot || Cold</title>
+		<title>HOT or COLD by Erin Hinkle</title>
 
 		<!-- Meta Tags -->
 		<meta charset="utf-8"/>
